--- a/release-notes/4.7.24.md
+++ b/release-notes/4.7.24.md
@@ -14,42 +14,16 @@ Released September 6, 2017;
 | *Does this version...?*                                     |         |
 |:----------------------------------------------------------- |:-------:|
 | Fix security vulnerabilities?                               |   No    |
-| Change the database schema?                                 |   Yes   |
-| Alter the API?                                              |   Yes   |
+| **Change the database schema?**                             | **Yes** |
+| **Alter the API?**                                          | **Yes** |
 | Require attention to configuration options?                 |   No    |
 | Fix problems installing or upgrading to a previous version? |   No    |
-| Introduce features?                                         |   Yes   |
-| Fix bugs?                                                   |   Yes   |
+| **Introduce features?**                                     | **Yes** |
+| **Fix bugs?**                                               | **Yes** |
 
 ## <a name="features"></a>Features
 
 ### Core CiviCRM
-
-- **[CRM-20321](https://issues.civicrm.org/jira/browse/CRM-20321) Changing
-  membership type should change related contribution
-  ([10699](https://github.com/civicrm/civicrm-core/pull/10699))**
-
-  Provides option to tie the financial type of the contribution to the membership
-  type of its related membership when that membership type gets changed.
-
-- **[CRM-20965](https://issues.civicrm.org/jira/browse/CRM-20965) Add Pull
-  Request Template ([10784](https://github.com/civicrm/civicrm-core/pull/10784)
-  and [10758](https://github.com/civicrm/civicrm-core/pull/10758))**
-
-  This change sets up a PR template in github to help contributers standardize
-  their pull request documentation.
-
-- **[CRM-20960](https://issues.civicrm.org/jira/browse/CRM-20960) Upgrade Dompdf
-  to 0.8 ([10751](https://github.com/civicrm/civicrm-core/pull/10751))**
-
-  Civicrm now uses dompdf to 0.8 which is compatible with php7.1.
-
-- **[CRM-20929](https://issues.civicrm.org/jira/browse/CRM-20929) Allow styling
-  of page title in Angular
-  ([10711](https://github.com/civicrm/civicrm-core/pull/10711))**
-
-  This change conveys css classes from angular crm-page-title elements to the
-  main page title for styling purposes.
 
 - **[CRM-20941](https://issues.civicrm.org/jira/browse/CRM-20941) Determine &
   notify date to end support for PHP5.3 and PHP5.4
@@ -58,14 +32,27 @@ Released September 6, 2017;
 
   Updated upgrade message text regarding support for PHP5.3 and PHP5.4
 
+- **[CRM-20960](https://issues.civicrm.org/jira/browse/CRM-20960) Upgrade Dompdf
+  to 0.8 ([10751](https://github.com/civicrm/civicrm-core/pull/10751))**
+
+  Civicrm now uses dompdf to 0.8 which is compatible with PHP 7.1.
+
 - **[CRM-20563](https://issues.civicrm.org/jira/browse/CRM-20563) Improve
   'unable to provide this...' error message
   ([10340](https://github.com/civicrm/civicrm-core/pull/10340))**
 
-  More descriptive version of "Sorry but we are not able to provide this at the
-  moment." error message it now says "Sorry, due to an error, CiviCRM is unable to
-  fulfill your request at the moment. You may want to contact your administrator
-  or service provider with more details about when this occurred."
+  The "Sorry but we are not able to provide this at the moment." error message
+  is improved to be more descriptive.  It now says "Sorry, due to an error,
+  CiviCRM is unable to fulfill your request at the moment. You may want to
+  contact your administrator or service provider with more details about when
+  this occurred."
+
+- **[CRM-20929](https://issues.civicrm.org/jira/browse/CRM-20929) Allow styling
+  of page title in Angular
+  ([10711](https://github.com/civicrm/civicrm-core/pull/10711))**
+
+  This change conveys CSS classes from Angular `crm-page-title` elements to the
+  main page title for styling purposes.
 
 - **[CRM-20945](https://issues.civicrm.org/jira/browse/CRM-20945) Differentiate
   using CSS active selected page in AtoZ Pager
@@ -73,6 +60,27 @@ Released September 6, 2017;
 
   Now when using the A to Z pager (searching alphabetically) the active selected
   page is differentiated from the other pages listed.
+
+- **[CRM-20863](https://issues.civicrm.org/jira/browse/CRM-20863) Improve
+  ordering of report lists
+  ([10653](https://github.com/civicrm/civicrm-core/pull/10653))**
+
+  If reports have the same weight they will now be ordered alphabetically by
+  title ascending.
+
+- **[CRM-20994](https://issues.civicrm.org/jira/browse/CRM-20994)
+  CurrentEmployer Report contains a hardcoded value for RelationshipType
+  ([10795](https://github.com/civicrm/civicrm-core/pull/10795))**
+
+  Changes Current Employer Report to get Employee Relationship type from the API
+  instead of a hardcoded value of the ID `4`.
+
+- **[CRM-21012](https://issues.civicrm.org/jira/browse/CRM-21012) Add link to
+  release notes in CiviCRM footer
+  ([10807](https://github.com/civicrm/civicrm-core/pull/10807))**
+
+  The version number in the footer now links to the release notes for that
+  version.
 
 ### CiviContribute
 
@@ -83,29 +91,30 @@ Released September 6, 2017;
   [10777](https://github.com/civicrm/civicrm-core/pull/10777), and
   [10774](https://github.com/civicrm/civicrm-core/pull/10774)) (Initial Work)**
 
-  Updates the user experience for partial payments for events, memberships and contributions on entry, editing and display.
+  Updates the user experience for partial payments for events, memberships and
+  contributions on entry, editing and display.
 
 - **[CRM-20890](https://issues.civicrm.org/jira/browse/CRM-20890) Move
   recieve_date between Contribution status and Revenue Recognition date in
   Contribution backoffice form
   ([10682](https://github.com/civicrm/civicrm-core/pull/10682))**
 
-  This change moves the placement of fields on the backoffice contribution form
-  to enhance user experience.
+  This change moves the placement of fields on the backend contribution form to
+  enhance user experience.
 
 - **[CRM-20984](https://issues.civicrm.org/jira/browse/CRM-20984) Move placement
   of payment processor field on live mode
   ([10787](https://github.com/civicrm/civicrm-core/pull/10787))**
 
-  This change moves the placement of the choose payment processor field on live
-  mode contribution form closer to the billing block to improve user experience.
+  This change moves the payment processor selection field on the backend credit
+  card contribution form.  It is now closer to the billing block.
 
 - **[CRM-20860](https://issues.civicrm.org/jira/browse/CRM-20860) Add in
   password type field availability and apply to payment processor fields
   ([10660](https://github.com/civicrm/civicrm-core/pull/10660))**
 
-  Added in the ability to add in a password type field as an option for
-  QuickForm. This new field type is also applied to the Payment Processor Password fields for
+  QuickForm now allows for a `password` type field to be added to forms. This
+  new field type is also applied to the Payment Processor Password fields for
   security purposes.
 
 - **[CRM-20876](https://issues.civicrm.org/jira/browse/CRM-20876) in honor of
@@ -115,7 +124,19 @@ Released September 6, 2017;
   Now, When making a contribution in honor of someone, the person who is being
   honored shows up on the receipt.
 
-### CiviPledge
+- **[CRM-20931](https://issues.civicrm.org/jira/browse/CRM-20931) Allow contact
+  custom fields to be added to Contribution Detail report
+  ([10713](https://github.com/civicrm/civicrm-core/pull/10713))**
+
+  Now one can add contact custom fields to the Contribution Detail report.
+
+- **[CRM-20987](https://issues.civicrm.org/jira/browse/CRM-20987) Add
+  transaction date field to listings of transactions
+  ([10789](https://github.com/civicrm/civicrm-core/pull/10789))**
+
+  On the Financial batch listing page, the "Received" column is now labeled
+  "Transaction Date", and a new "Received" column, derived from
+  `civicrm_contribution.receive_date`, is displayed.
 
 - **[CRM-20913](https://issues.civicrm.org/jira/browse/CRM-20913) Separate
   pledge statuses from contribution statuses
@@ -123,8 +144,8 @@ Released September 6, 2017;
   [10803](https://github.com/civicrm/civicrm-core/pull/10803), and
   [10737](https://github.com/civicrm/civicrm-core/pull/10737))**
 
-  Creates a new option group for pledge status for pledges to use (pledges were
-  using contribution statuses).
+  Creates a new option group for pledge status for pledges to use.  Previously,
+  pledges were using contribution statuses.
 
 ### CiviMail
 
@@ -135,37 +156,15 @@ Released September 6, 2017;
   This change converts list of groups and mailings in CiviMail to be loaded
   dynamically to improve performance.
 
-### Accounting Integration
+### CiviMember
 
-- **[CRM-20987](https://issues.civicrm.org/jira/browse/CRM-20987) Add
-  transaction date field to listings of transactions
-  ([10789](https://github.com/civicrm/civicrm-core/pull/10789))**
+- **[CRM-20321](https://issues.civicrm.org/jira/browse/CRM-20321) Changing
+  membership type should change related contribution
+  ([10699](https://github.com/civicrm/civicrm-core/pull/10699))**
 
-  On the Financial batch listing page lists This PR  renames
-  the column name from Received to Transaction Date and Adds a column Received
-  derived from civicrm_contribution.receive_date
-
-### CiviReport
-
-- **[CRM-20863](https://issues.civicrm.org/jira/browse/CRM-20863) Improve
-  ordering of report lists
-  ([10653](https://github.com/civicrm/civicrm-core/pull/10653))**
-
-  Now if reports have the same weight they will be ordered alphabetically by
-  title ascending
-
-- **[CRM-20994](https://issues.civicrm.org/jira/browse/CRM-20994)
-  CurrentEmployer Report contains a hardcoded value for RelationshipType
-  ([10795](https://github.com/civicrm/civicrm-core/pull/10795))**
-
-  Changes CurrentEmployer Report to get Employee Relationship type from api
-  instead of a hardcoded value of the id 4.
-
-- **[CRM-20931](https://issues.civicrm.org/jira/browse/CRM-20931) Allow contact
-  custom fields to be added to Contribution Detail report
-  ([10713](https://github.com/civicrm/civicrm-core/pull/10713))**
-
-  Now one can add contact custom fields to the Contribution Detail report.
+  A new option ties the financial type of a membership payment contribution to the
+  membership type of its related membership.  When that membership type gets
+  changed and the option is set, the contribution's financial type changes.
 
 ## <a name="bugs"></a>Bugs resolved
 
@@ -181,10 +180,6 @@ Released September 6, 2017;
 
 - **Suppress error if fakeFile cannot be created.
   ([10677](https://github.com/civicrm/civicrm-core/pull/10677))**
-
-- **[CRM-21002](https://issues.civicrm.org/jira/browse/CRM-21002) Credit card
-  type icons are incorrectly populated on backoffice live mode
-  ([10799](https://github.com/civicrm/civicrm-core/pull/10799))**
 
 - **[CRM-20947](https://issues.civicrm.org/jira/browse/CRM-20947) Remove
   Deprecation Notice for Option group
@@ -202,32 +197,9 @@ Released September 6, 2017;
 
   Removes use of CRM_Core_OptionGroup::getKey function which is deprecated
 
-- **[CRM-20967](https://issues.civicrm.org/jira/browse/CRM-20967) Event
-  Participants List shows Total paid and balance incorrect
-  ([10763](https://github.com/civicrm/civicrm-core/pull/10763))**
-
-  Fixes a bug where the Participants List was showing "Total paid" and "balance"
-  incorrect when Deferred revenue was enabled.
-
-- **[CRM-20946](https://issues.civicrm.org/jira/browse/CRM-20946) Wrong entries
-  in financial table when contribution is cancelled
-  ([10726](https://github.com/civicrm/civicrm-core/pull/10726))**
-
-  Fixes a bug where the Wrong entries were being added to the financial table
-  when the contribution was canceled, now uses line total of line item to store
-  in financial item table
-
 - **[CRM-20607](https://issues.civicrm.org/jira/browse/CRM-20607) Can't save a
   reserved dedupe rule
   ([10383](https://github.com/civicrm/civicrm-core/pull/10383))**
-
-- **[CRM-20952](https://issues.civicrm.org/jira/browse/CRM-20952) Refresh
-  membership tab on edits to membership payments
-  ([10741](https://github.com/civicrm/civicrm-core/pull/10741))**
-
-- **[CRM-20910](https://issues.civicrm.org/jira/browse/CRM-20910) API call to
-  Participant.get ignores check_permissons
-  ([10698](https://github.com/civicrm/civicrm-core/pull/10698))**
 
 - **[CRM-20577](https://issues.civicrm.org/jira/browse/CRM-20577) When creating
   an activity per-contact when sending letters, store the version with rendered
@@ -237,43 +209,16 @@ Released September 6, 2017;
   code in db prevents searching by zipcode range
   ([10769](https://github.com/civicrm/civicrm-core/pull/10769))**
 
-  entering a long postal code into the db was preventing searching by zipcode range on some
-  configurations.
+  Entering a long postal code into the database was preventing searching by
+  postal code range on some configurations.
 
 - **[CRM-20973](https://issues.civicrm.org/jira/browse/CRM-20973) Call to
   undefined function Civi\API\civicrm_api3_create_error() in Civi/API/Kernel.php
   on line 413 ([10773](https://github.com/civicrm/civicrm-core/pull/10773))**
 
-- **[CRM-20976](https://issues.civicrm.org/jira/browse/CRM-20976) Improve error
-  handling when someone tries to make a credit card contribution and no
-  processor is configured
-  ([10775](https://github.com/civicrm/civicrm-core/pull/10775))**
-
-  Now throws an error message instead of spinny wheel of death when someone tries
-  to make a credit card contribution on a civicrm with no processor configured.
-
-- **(NFC) Fix permissions on CRM/Contribute/BAO/Contribution.php
-  ([10766](https://github.com/civicrm/civicrm-core/pull/10766))**
-
-- **Fix placement of call to simplifyURL() function
-  ([10762](https://github.com/civicrm/civicrm-core/pull/10762))**
-
-- **[CRM-20954](https://issues.civicrm.org/jira/browse/CRM-20954) Fatal SQL
-  error when completing a partially paid contribution in localized installation
-  ([10747](https://github.com/civicrm/civicrm-core/pull/10747))**
-
-- **CRM_Utils_SQL_Select - Allow fluent query execution
-  ([10686](https://github.com/civicrm/civicrm-core/pull/10686))**
-
-- **[CRM-19575](https://issues.civicrm.org/jira/browse/CRM-19575) Cron jobs on
-  Joomla triggers "Use of undefined constant JDEBUG"
-  ([10715](https://github.com/civicrm/civicrm-core/pull/10715))**
-
-- **Remove broken symlink from vendor/pear/net_smtp
+- **[CRM-20884](https://issues.civicrm.org/jira/browse/CRM-20884) broken symlink
+  in net_smtp packages
   ([10676](https://github.com/civicrm/civicrm-core/pull/10676))**
-
-- **(NFC) gitignore - Remove obsolete entries
-  ([10714](https://github.com/civicrm/civicrm-core/pull/10714))**
 
 - **[CRM-20648](https://issues.civicrm.org/jira/browse/CRM-20648) Allow
   registration in event with cancelled registration
@@ -281,9 +226,6 @@ Released September 6, 2017;
 
   If a user has a canceled registration for an event civi now allows them to
   register on the front end for that same event.
-
-- **regen.sh - Fix stale function call in sql/GenerateData.php
-  ([10706](https://github.com/civicrm/civicrm-core/pull/10706))**
 
 - **[CRM-20995](https://issues.civicrm.org/jira/browse/CRM-20995) API -
   Extension get - Ignores parameter full_name as created by API explorer
@@ -301,13 +243,27 @@ Released September 6, 2017;
   api_v3_SettingTest where string being used but needs to be array for php7.1
   ([10753](https://github.com/civicrm/civicrm-core/pull/10753))**
 
-  Code Improvement for php7.1 compatibility
+  Code Improvement for PHP 7.1 compatibility
 
 - **[CRM-20972](https://issues.civicrm.org/jira/browse/CRM-20972) PHP7.1 New
   Exception generated causing failures in API_v3_SyntaxConformanceTests
   ([10772](https://github.com/civicrm/civicrm-core/pull/10772))**
 
-  Code Improvement for php7.1 compatibility
+  Code Improvement for PHP 7.1 compatibility
+
+- **[CRM-19941](https://issues.civicrm.org/jira/browse/CRM-19941) PHP 7.1
+  Compatability ([10724](https://github.com/civicrm/civicrm-core/pull/10724))**
+
+- **[CRM-20969](https://issues.civicrm.org/jira/browse/CRM-20969) Fix issue in
+  reports where we try and append a new array key to string
+  ([10765](https://github.com/civicrm/civicrm-core/pull/10765))**
+
+- **[CRM-21029](https://issues.civicrm.org/jira/browse/CRM-21029) Activity
+  report SQL syntax error
+  ([10820](https://github.com/civicrm/civicrm-core/pull/10820))**
+
+  Fixes network error thrown on the Scheduled Activities dashlet "Network Error :
+  unable to reach the server".
 
 ### CiviMail
 
@@ -326,6 +282,31 @@ Released September 6, 2017;
 
 ### CiviContribute
 
+- **[CRM-20954](https://issues.civicrm.org/jira/browse/CRM-20954) Fatal SQL
+  error when completing a partially paid contribution in localized installation
+  ([10747](https://github.com/civicrm/civicrm-core/pull/10747))**
+
+- **[CRM-20976](https://issues.civicrm.org/jira/browse/CRM-20976) Improve error
+  handling when someone tries to make a credit card contribution and no
+  processor is configured
+  ([10775](https://github.com/civicrm/civicrm-core/pull/10775))**
+
+  An error message is now displayed instead of an endless spinning wheel when
+  someone tries to make a credit card contribution on a contribution page with
+  no processor configured.
+
+- **[CRM-20946](https://issues.civicrm.org/jira/browse/CRM-20946) Wrong entries
+  in financial table when contribution is cancelled
+  ([10726](https://github.com/civicrm/civicrm-core/pull/10726))**
+
+  Fixes a bug where the wrong entries were being added to the financial table
+  when the contribution was canceled, now uses line total of line item to store
+  in financial item table
+
+- **[CRM-21002](https://issues.civicrm.org/jira/browse/CRM-21002) Credit card
+  type icons are incorrectly populated on backoffice live mode
+  ([10799](https://github.com/civicrm/civicrm-core/pull/10799))**
+
 - **[CRM-21027](https://issues.civicrm.org/jira/browse/CRM-21027) Next recurring
   payment not accurately calculated when effective date passed in
   ([10818](https://github.com/civicrm/civicrm-core/pull/10818))**
@@ -339,30 +320,23 @@ Released September 6, 2017;
 
 - **[CRM-20821](https://issues.civicrm.org/jira/browse/CRM-20821) Saving an
   existing premium product breaks the image URLs
-  ([10761](https://github.com/civicrm/civicrm-core/pull/10761) and
+  ([10761](https://github.com/civicrm/civicrm-core/pull/10761),
+  ([10762](https://github.com/civicrm/civicrm-core/pull/10762), and
   [10720](https://github.com/civicrm/civicrm-core/pull/10720))**
 
-- **[CRM-19941](https://issues.civicrm.org/jira/browse/CRM-19941) PHP 7.1
-  Compatability ([10724](https://github.com/civicrm/civicrm-core/pull/10724))**
-
 ### CiviMember
+
+- **[CRM-20952](https://issues.civicrm.org/jira/browse/CRM-20952) Refresh
+  membership tab on edits to membership payments
+  ([10741](https://github.com/civicrm/civicrm-core/pull/10741))**
 
 - **[CRM-20961](https://issues.civicrm.org/jira/browse/CRM-20961) Non numeric
   php 7.1 error when running api_v3_MembershipTest
   ([10752](https://github.com/civicrm/civicrm-core/pull/10752))**
 
-### CiviReport
-
-- **[CRM-20969](https://issues.civicrm.org/jira/browse/CRM-20969) Fix issue in
-  reports where we try and append a new array key to string
-  ([10765](https://github.com/civicrm/civicrm-core/pull/10765))**
-
-- **[CRM-21029](https://issues.civicrm.org/jira/browse/CRM-21029) Activity
-  report SQL syntax error
-  ([10820](https://github.com/civicrm/civicrm-core/pull/10820))**
-
-  Fixes network error thrown on the Scheduled Activities dashlet "Network Error :
-  unable to reach the server".
+- **[CRM-20875](https://issues.civicrm.org/jira/browse/CRM-20875) Import of
+  membership custom data throws notice errors.
+  ([10664](https://github.com/civicrm/civicrm-core/pull/10664))**
 
 ### CiviSMS
 
@@ -370,13 +344,18 @@ Released September 6, 2017;
   check in Scheduled Reminders, breaks for multisite
   ([10792](https://github.com/civicrm/civicrm-core/pull/10792))**
 
-### Import
-
-- **[CRM-20875](https://issues.civicrm.org/jira/browse/CRM-20875) Import of
-  membership custom data throws notice errors.
-  ([10664](https://github.com/civicrm/civicrm-core/pull/10664))**
-
 ### CiviEvent
+
+- **[CRM-20910](https://issues.civicrm.org/jira/browse/CRM-20910) API call to
+  Participant.get ignores check_permissons
+  ([10698](https://github.com/civicrm/civicrm-core/pull/10698))**
+
+- **[CRM-20967](https://issues.civicrm.org/jira/browse/CRM-20967) Event
+  Participants List shows Total paid and balance incorrect
+  ([10763](https://github.com/civicrm/civicrm-core/pull/10763))**
+
+  Fixes a bug where the Participants List was showing "Total paid" and "balance"
+  incorrect when Deferred revenue was enabled.
 
 - **[CRM-17236](https://issues.civicrm.org/jira/browse/CRM-17236) Custom dates
   fields displayed as (01/01/1970) in Events Confirmation Reciept
@@ -390,14 +369,32 @@ Released September 6, 2017;
   Compatability issue with Manage Events
   ([10748](https://github.com/civicrm/civicrm-core/pull/10748))**
 
+### Joomla Integration
+
+- **[CRM-19575](https://issues.civicrm.org/jira/browse/CRM-19575) Cron jobs on
+  Joomla triggers "Use of undefined constant JDEBUG"
+  ([10715](https://github.com/civicrm/civicrm-core/pull/10715))**
+
 ## <a name="misc"></a>Miscellany
 
-- **[CRM-21012](https://issues.civicrm.org/jira/browse/CRM-21012) Add link to
-  release notes in CiviCRM footer
-  ([10807](https://github.com/civicrm/civicrm-core/pull/10807))**
+- **[CRM-20965](https://issues.civicrm.org/jira/browse/CRM-20965) Add Pull
+  Request Template ([10784](https://github.com/civicrm/civicrm-core/pull/10784)
+  and [10758](https://github.com/civicrm/civicrm-core/pull/10758))**
 
-- **Bring 4.7.23 Release notes into 4.7.24
-  ([10875](https://github.com/civicrm/civicrm-core/pull/10875))**
+  This change sets up a PR template in github to help contributers standardize
+  their pull request documentation.
+
+- **(NFC) Fix permissions on CRM/Contribute/BAO/Contribution.php
+  ([10766](https://github.com/civicrm/civicrm-core/pull/10766))**
+
+- **CRM_Utils_SQL_Select - Allow fluent query execution
+  ([10686](https://github.com/civicrm/civicrm-core/pull/10686))**
+
+- **(NFC) gitignore - Remove obsolete entries
+  ([10714](https://github.com/civicrm/civicrm-core/pull/10714))**
+
+- **regen.sh - Fix stale function call in sql/GenerateData.php
+  ([10706](https://github.com/civicrm/civicrm-core/pull/10706))**
 
 ## <a name="credits"></a>Credits
 
